--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,16 +6,18 @@ authors = ["Zach \"theY4Kman\" Kanzler <they4kman@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 packages = [{include = "psu_progs"}]
+repository = "https://github.com/theY4Kman/psu-progs"
+homepage = "https://github.com/theY4Kman/psu-progs"
 
 [tool.poetry.dependencies]
 python = "^3.9"
 click = "^8.1.3"
 pyserial = "^3.5"
 
+[tool.poetry.scripts]
+korad-charge-lithium-ion = "psu_progs.charge_lithium_ion:charge"
+
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.poetry.scripts]
-korad-charge-lithium-ion = "psu_progs.charge_lithium_ion:charge"
